tenzir/integration/data/reference/python/test_python_operator_invalid_syntax/step_00.ref
error: File "<inline>", line 1
    x=
      ^
SyntaxError: invalid syntax
 = note: python process exited with error